Support friendlier OS X builds.
Ignore mac build products and intermediates.
Rename original Makefile => Makefile.posix.
New mac-friendly Makefile.osx.
New Makefile wrapper that proxies build targets to platform Makefile.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Racket
+ivy
 compiled
 *.bak
 
@@ -6,3 +7,8 @@ compiled
 *.swp
 *.swo
 *~
+
+# OS X build products and intermediates
+*.icns
+ivy.app
+mac.iconset
