Portage complains 'Accessories' doesn't exist

--- a/ivy-image-viewer.desktop
+++ b/ivy-image-viewer.desktop
@@ -2,8 +2,8 @@
 Name=Ivy Image Viewer
 Type=Application
 Encoding=UTF-8
-Comment=a taggable image browser written in Racket
-Categories=Graphics;2DGraphics;RasterGraphics;Viewer;Accessories;
+Comment=A taggable image browser written in Racket
+Categories=Graphics;2DGraphics;RasterGraphics;Viewer;
 # Use the full, absolute path.
 # Icon=/PATH/TO/ICON.png
 # Exec=/PATH/TO/EXECUTABLE
