--- a/Makefile.posix
+++ b/Makefile.posix
@@ -1,14 +1,29 @@
-DESTDIR=/usr/local
+DESTDIR = /usr/local
+DOCDIR = $(DESTDIR)/share/doc/ivy-1.2
+MANDIR = $(DESTDIR)/share/man/man1
+
+RACO = raco
+RFLAGS = --vv --gui
+
+MAIN = main.rkt
+SOURCES = $(MAIN) base.rkt db.rkt db-statistics.rkt files.rkt frame.rkt search-dialog.rkt search-results.rkt
+IMAGES = img/ivy-logo-128px.png img/ivy-logo-256px.png img/ivy-logo-48px.png  img/ivy-logo-64px.png img/ivy-logo-16px.png  img/ivy-logo-32px.png  img/ivy-logo-512px.png
+DOCS = doc/ivy.html doc/ivy.md README.md
+MANPAGES = doc/ivy.1.bz2
 
 all: ivy-bin
 
-ivy-bin: main.rkt base.rkt frame.rkt search-results.rkt
-	raco exe --vv --gui -o ivy main.rkt
+ivy: ivy-bin
 
-install: ivy ivy-image-viewer.desktop img/
+ivy-bin: $(SOURCES)
+	${RACO} exe $(RFLAGS) -o ivy $(MAIN)
+
+install: ivy ivy-image-viewer.desktop $(IMAGES) $(MANPAGES)
 	mkdir -pv $(DESTDIR)/bin
 	mkdir -pv $(DESTDIR)/share/icons/hicolor/{16x16,32x32,48x48,64x64,128x128,256x256,512x512,scalable}/apps
 	mkdir -pv $(DESTDIR)/share/applications
+	mkdir -pv $(MANDIR)
+	mkdir -pv $(DOCDIR)
 	sed "s:# Icon=/PATH/TO/ICON.png:Icon=$(DESTDIR)/share/icons/hicolor/128x128/apps/ivy-logo-128px.png:" ivy-image-viewer.desktop >$(DESTDIR)/share/applications/ivy-image-viewer.desktop
 	sed -i "s:# Exec=/PATH/TO/EXECUTABLE:Exec=$(DESTDIR)/bin/ivy:" $(DESTDIR)/share/applications/ivy-image-viewer.desktop
 	chmod 0755 $(DESTDIR)/share/applications/ivy-image-viewer.desktop
@@ -21,6 +36,8 @@ install: ivy ivy-image-viewer.desktop img/
 	install -m 0644 img/ivy-logo-256px.png $(DESTDIR)/share/icons/hicolor/256x256/apps
 	install -m 0644 img/ivy-logo-512px.png $(DESTDIR)/share/icons/hicolor/512x512/apps
 	install -m 0644 img/ivy-logo.svg $(DESTDIR)/share/icons/hicolor/scalable/apps
+	install -m 0644 doc/ivy.1.bz2 $(MANDIR)
+	install -m 0644 doc/ivy.md doc/ivy.html README.md $(DOCDIR)
 
 clean:
 	rm -Rv compiled/
