--- a/ivy-image-viewer.desktop
+++ b/ivy-image-viewer.desktop
@@ -1,10 +1,18 @@
 [Desktop Entry]
-Name=Ivy Image Viewer
-Type=Application
-Encoding=UTF-8
-Comment=A taggable image browser written in Racket
-Categories=Graphics;2DGraphics;RasterGraphics;Viewer;
-# Use the full, absolute path.
-# Icon=/PATH/TO/ICON.png
-# Exec=/PATH/TO/EXECUTABLE
-Terminal=false
+Type     = Application
+Encoding = UTF-8
+Version  = 1.1
+
+Name               = Ivy
+GenericName        = image viewer
+GenericName[en_US] = image viewer
+Comment            = image viewer, metadata editor, and collection manager
+Comment[en_US]     = image viewer, metadata editor, and collection manager
+
+Categories    = Graphics; 2DGraphics; VectorGraphics; RasterGraphics; Viewer;
+Keywords      = image; metadata; viewer;
+MimeType      = image/bmp; image/flif; image/gif; image/jpeg; image/png; image/svg+xml; image/x‑xbitmap; image/x‑xpixmap;
+# Icon          = /PATH/TO/ICON.png
+# Exec          = /PATH/TO/EXECUTABLE %u
+Terminal      = false
+StartupNotify = true
